examples/good/09-03-shadowing.dog
int x;

int fun(int x) {
    return x;
}

x = 5;
yeet x;
yeet fun(x + 2);