examples/bad/06-04-functions-loops-missing-return.dog
int fun() {
    while (true) {
        return 5;
    }

    // missing return
}